hphp/hack/test/typecheck/nonnull/await_nonnull.php.exp
File "await_nonnull.php", line 3, characters 31-34:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
File "await_nonnull.php", line 4, characters 3-10:
`await` can only operate on an `Awaitable` (Typing[4110])
  File "await_nonnull.php", line 4, characters 3-10:
  Expected `Awaitable<_>`
  File "await_nonnull.php", line 3, characters 18-24:
  But got `nonnull`
File "await_nonnull.php", line 3, characters 16-16:
Invalid return type (Typing[4336])
  File "await_nonnull.php", line 3, characters 31-34:
  Expected `void`
  File "await_nonnull.php", line 3, characters 16-16:
  But got `Awaitable<void>` because this function does not always return a value
