hphp/hack/test/typecheck/nonnull/await_nonnull.php
<?hh

async function g(nonnull $x): void {
  await $x;
}
